--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
 
     <!--Menu-->
     <ul class="menu">
-      <li><a href="home.html" onclick="toggleMenu();">Home</a></li>
+      <li><a href="index.html" onclick="toggleMenu();">Home</a></li>
       <li><a href="about.html" onclick="toggleMenu();">About</a></li>
       <li><a href="services.html"onclick="toggleMenu();">Services</a></li>
       <li><a href="#work"onclick="toggleMenu();">Work</a></li>
