--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
 
     <!--Menu-->
     <ul class="menu">
-      <li><a href="home.html" onclick="toggleMenu();">Home</a></li>
+      <li><a href="index.html" onclick="toggleMenu();">Home</a></li>
       <li><a href="about.html" onclick="toggleMenu();">About</a></li>
       <li><a href="#services"onclick="toggleMenu();">Services</a></li>
       <li><a href="work.html"onclick="toggleMenu();">Work</a></li>
